# Trashpilethe-game

./: .gitignore  Readme  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
documents/: CHALLENGE_SYSTEM_INTEGRATION.md  CHALLENGE_SYSTEM_README.md  CHALLENGE_SYSTEM_SUMMARY.md  DATABASE_INTEGRATION_GUIDE.md  FINAL_COMPLETION_SUMMARY.md  FINAL_INTEGRATION_COMPLETE.md  FINAL_VERIFICATION.md  INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  SKILLS_ABILITIES_COMPLETE.md  SKILLS_ABILITIES_INTEGRATION_SUMMARY.md  TESTING_GUIDE.md  TIERED_INTEGRATION_SUMMARY.md  TIERED_INTEGRATION_TODO.md  TIERED_PROGRESSION.md  TIERED_PROGRESSION_GUIDE.md  TROPHY_SYSTEM_INTEGRATION.md  TROPHY_SYSTEM_README.md  TROPHY_SYSTEM_SUMMARY.md  UI_IMPLEMENTATION_SUMMARY.md  qa_inspection_report.md  todo.md
libgdx-core/: build.gradle.kts
oboe-audio/: build.gradle.kts
oboe-audio/src/main/cpp/: AudioEngine.cpp  AudioMixer.cpp  CMakeLists.txt  SoundManager.cpp  SpatialAudio.cpp  jni_bridge.cpp
oboe-audio/src/main/cpp/include/: AudioEngine.h  AudioMixer.h  SoundManager.h  SpatialAudio.h
outputs/: workspace_output_1768164703_7833.txt  workspace_output_1768165783_9342.txt  workspace_output_1768165785_2318.txt  workspace_output_1768165788_4025.txt  workspace_output_1768165795_9432.txt  workspace_output_1768165799_4299.txt  workspace_output_1768168366_5910.txt  workspace_output_1768168369_8388.txt  workspace_output_1768168526_5783.txt  workspace_output_1768168642_4344.txt  workspace_output_1768168775_9264.txt  workspace_output_1768168920_6888.txt  workspace_output_1768168975_9673.txt  workspace_output_1768168999_8448.txt  workspace_output_1768169035_2029.txt  workspace_output_1768169136_1793.txt  workspace_output_1768169144_6271.txt  workspace_output_1768171043_321.txt  workspace_output_1768171398_2771.txt  workspace_output_1768172002_5622.txt  workspace_output_1768172021_3670.txt  workspace_output_1768173293_7553.txt  workspace_output_1768173307_6610.txt  workspace_output_1768174266_7068.txt  workspace_output_1768174271_6031.txt  workspace_output_1768174272_6393.txt  workspace_output_1768174276_7665.txt  workspace_output_1768174909_5869.txt  workspace_output_1768174917_8470.txt  workspace_output_1768174934_3747.txt  workspace_output_1768175068_9387.txt  workspace_output_1768175080_5476.txt  workspace_output_1768175087_1028.txt  workspace_output_1768175094_6681.txt  workspace_output_1768175098_7768.txt  workspace_output_1768175102_3144.txt  workspace_output_1768175120_4328.txt  workspace_output_1768175125_6548.txt  workspace_output_1768175711_6107.txt  workspace_output_1768175765_7271.txt  (+100 more)
skia-graphics/: build.gradle.kts
skia-graphics/src/main/cpp/: CMakeLists.txt  CardRenderer.cpp  GraphicsEngine.cpp  ParticleEffect.cpp  Renderer.cpp  ShaderManager.cpp  jni_bridge.cpp
skia-graphics/src/main/cpp/include/: CardRenderer.h  GraphicsEngine.h  ParticleEffect.h  Renderer.h  ShaderManager.h
tools/: generate_content.py
(+85 files in other folders)
